# LiaoClaw

./: .env.example  .env.ps1.example  .gitignore  README.md  benchmark.py  benchmark_full.py  dev.ps1  dev.sh  pyproject.toml  test_mcp_all.py  test_mcp_github.py  项目运行.md
.Liaoclaw/: settings.example.json  settings.json
.Liaoclaw/im/: session_map.json
.Liaoclaw/sessions/im_01c77d9f983c/: context.jsonl  meta.json  session.jsonl
.Liaoclaw/sessions/im_0b932ce39991/: context.jsonl  (+3 more)
.Liaoclaw/skills/: code_review.md  optimize_code.md  write_test.md
docs/: 00_文件总览.md
docs/01_AI统一接口层/: 01_消息与模型类型体系.md  02_Provider注册与分发机制.md  03_流式响应与事件流.md  04_Token溢出估算.md
docs/02_Agent编排内核/: 01_Agent对象与生命周期.md  02_主循环详解.md  03_工具协议与执行策略.md  04_事件驱动架构.md
docs/03_编程Agent应用层/: 01_会话工厂与资源加载.md  02_内置工具实现.md  03_会话持久化与分叉.md  04_上下文压缩与重试.md  05_CLI与运行模式.md
docs/04_IM飞书桥接层/: 01_IM服务核心架构.md  02_飞书适配器实现.md  03_会话路由与记忆系统.md
docs/05_交付与运行/: 01_项目交付运行手册.md
examples/: coding_agent_quickstart.py  quickstart.py
mcp_servers/: weather_server.py
skills/quick_check/: SKILL.md
src/agent_core/: __init__.py
src/ai/: __init__.py  mcp_client.py  models.py
src/coding_agent/: __init__.py  agent_session.py  cli.py  command_registry.py  factory.py  resources.py  runner.py  session_store.py  web.py
src/im/: __init__.py  cli.py  events.py  feishu.py  feishu_longconn.py  memory.py  server.py  service.py  session_router.py
tests/: test_agent_core_loop.py  test_coding_agent_resources.py  test_coding_agent_session_store.py  test_coding_agent_web.py  test_im_feishu.py  test_im_service.py
(+68 files in other folders)
