[project]
name = "liaoclaw"
version = "0.2.0"
description = "LiaoClaw: unified LLM API + agent core + IM bridge (Feishu)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
]

[project.optional-dependencies]
feishu = ["lark-oapi>=1.0.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
liaoclaw = "coding_agent.cli:main"
liaoclaw-im = "im.cli:main"
liaoclaw-web = "coding_agent.web:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
coding_agent = ["web_static/*"]
